tests/programs/errors/variadic_not_last.flow
fn bad(..vals:int, extra:string):int {
    return 0
}

fn main():int {
    return 0
}
